--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Get Progressive with it</title>
+    <link rel="stylesheet" type="text/css" href="./app.css" media="screen" />
   </head>
   <body>
     <div id="root"></div>
